<?xml version="1.0"?>
<package format="2">
    <name>sensors_description</name>
    <version>0.0.0</version>
    <description>The sensors_description package</description>

    <maintainer email="federico.rollo@leonardo.com">Federico Rollo</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
